@@ -1,5 +1,13 @@
 2008-03-30  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/ws-leap.c
+		- (ws_leap_new): fill leap password and username
+
+	* src/wireless-security/eap-method-tls.c
+		- (eap_method_tls_new): fill passwords, identity, and certificates
+
+2008-03-30  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/main.c
 		- (main): init the crypto system so that NSS and gnutls don't segfault
 			when editing EAP-TLS and EAP-TTLS connections
